store initial prompts as json file

--- a/data/sample.ipynb
+++ b/data/sample.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "path = 'test.jsonl' # downloaded from https://huggingface.co/datasets/codeparrot/apps \n",
     "with open(path) as f:\n",
-    "    data = [json.loads(line) for line in f]"
+    "    prompt_template = [json.loads(line) for line in f]"
    ]
   },
   {
@@ -49,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "118019c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "introductory = sample_instances_of_('introductory', data)\n",
-    "interview = sample_instances_of_('interview', data)\n",
-    "competition = sample_instances_of_('competition', data)"
+    "introductory = sample_instances_of_('introductory', prompt_template)\n",
+    "interview = sample_instances_of_('interview', prompt_template)\n",
+    "competition = sample_instances_of_('competition', prompt_template)"
    ]
   },
   {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "918c7c4e",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "1743ff85",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
+   "id": "dc403107",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HE_base_prompt = '../prompt/HumanEval_base.txt'\n",
+    "with open(HE_base_prompt) as f:\n",
+    "    prompt_template = f.read()\n",
+    "\n",
+    "HE_prompts = dict()\n",
+    "for problem in he_data:\n",
+    "    id = problem['task_id']\n",
+    "    prompt = problem['prompt']\n",
+    "    HE_prompts[id] = prompt_template.format(problem=prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d3331c6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('HumanEval_prompts.json', 'w') as f:\n",
+    "    json.dump(HE_prompts, f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "781c4fc8",
    "metadata": {},
    "outputs": [
@@ -260,6 +289,35 @@
     "        print(f'Non-empty Starter:\\n{sample[\"starter_code\"]}\\n')\n",
     "\n",
     "# starter_code doesn't seem to help for our samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "57fb5729",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "APPS_base_prompt = '../prompt/APPS_base.txt'\n",
+    "with open(APPS_base_prompt) as f:\n",
+    "    prompt_template = f.read()\n",
+    "\n",
+    "APPS_prompts = dict()\n",
+    "for problem in apps_data:\n",
+    "    id = problem['id']\n",
+    "    prompt = problem['question']\n",
+    "    APPS_prompts[id] = prompt_template.format(problem=prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "37059f03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('APPS_prompts.json', 'w') as f:\n",
+    "    json.dump(APPS_prompts, f, indent=4)"
    ]
   }
  ],
