Update preprocess jupyter notebook

--- a/preprocessed_results/vote.ipynb
+++ b/preprocessed_results/vote.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,21 +13,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "benchmarks = [\"HumanEval\"]\n",
+    "benchmarks = [\"APPS\", \"HumanEval\"]\n",
     "models = [\"llama3\", \"llama3.1\", \"mistral-nemo\", \"qwen2.5-coder\"]\n",
-    "\n",
+    "modes = [None, \"instruction\", \"rule\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def tie_break(data):\n",
     "    ties = [i for i in data if i[1][0] == data[0][1][0]]\n",
     "    return random.choice(ties)\n",
     "\n",
     "\n",
-    "def vote(mode, benchmark, model):\n",
-    "    with open(f\"./preprocessed_results/{mode}/{benchmark}_{model}.json\", \"r\") as f:\n",
-    "        data =json.load(f)\n",
+    "def vote(mode, benchmark, model, prompt_mode=None):\n",
+    "    if not prompt_mode:\n",
+    "        with open(f\"./preprocessed_results/{mode}/{benchmark}_{model}.json\", \"r\") as f:\n",
+    "            data =json.load(f)\n",
+    "    if prompt_mode:\n",
+    "        with open(f\"./preprocessed_results/{mode}/{benchmark}_{model}_{prompt_mode}.json\", \"r\") as f:\n",
+    "            data =json.load(f)\n",
     "    result = []\n",
     "\n",
     "    for problem_id, samples in data.items():\n",
@@ -55,18 +67,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "APPS\n",
+      "APPS_llama3_None: 19/300\n",
+      "APPS_llama3_instruction: 20/300\n",
+      "APPS_llama3_rule: 21/300\n",
+      "APPS_llama3.1_None: 18/300\n",
+      "APPS_llama3.1_instruction: 21/300\n",
+      "APPS_llama3.1_rule: 20/300\n",
+      "APPS_mistral-nemo_None: 25/300\n",
+      "APPS_mistral-nemo_instruction: 29/300\n",
+      "APPS_mistral-nemo_rule: 28/300\n",
+      "APPS_qwen2.5-coder_None: 18/300\n",
+      "APPS_qwen2.5-coder_instruction: 21/300\n",
+      "APPS_qwen2.5-coder_rule: 18/300\n",
       "HumanEval\n",
-      "llama3: 50/164\n",
-      "llama3.1: 82/164\n",
-      "mistral-nemo: 53/164\n",
-      "qwen2.5-coder: 109/164\n"
+      "HumanEval_llama3_None: 53/164\n",
+      "HumanEval_llama3_instruction: 56/164\n",
+      "HumanEval_llama3_rule: 56/164\n",
+      "HumanEval_llama3.1_None: 83/164\n",
+      "HumanEval_llama3.1_instruction: 82/164\n",
+      "HumanEval_llama3.1_rule: 85/164\n",
+      "HumanEval_mistral-nemo_None: 55/164\n",
+      "HumanEval_mistral-nemo_instruction: 54/164\n",
+      "HumanEval_mistral-nemo_rule: 55/164\n",
+      "HumanEval_qwen2.5-coder_None: 109/164\n",
+      "HumanEval_qwen2.5-coder_instruction: 108/164\n",
+      "HumanEval_qwen2.5-coder_rule: 107/164\n"
      ]
     }
    ],
@@ -74,8 +107,9 @@
     "for bm in benchmarks:\n",
     "    print(bm)\n",
     "    for model in models:\n",
-    "        result = vote(\"augmented\", bm, model + \"_augmented\")\n",
-    "        print(f\"{model}: {result.count(True)}/{len(result)}\")"
+    "        for mode in modes:\n",
+    "            result = vote(\"augmented\", bm, model + \"_augmented\")\n",
+    "            print(f\"{bm}_{model}_{mode}: {result.count(True)}/{len(result)}\")"
    ]
   },
   {
@@ -87,18 +121,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "APPS\n",
+      "APPS_llama3_None: 18/300\n",
+      "APPS_llama3_instruction: 21/300\n",
+      "APPS_llama3_rule: 23/300\n",
+      "APPS_llama3.1_None: 21/300\n",
+      "APPS_llama3.1_instruction: 18/300\n",
+      "APPS_llama3.1_rule: 19/300\n",
+      "APPS_mistral-nemo_None: 28/300\n",
+      "APPS_mistral-nemo_instruction: 34/300\n",
+      "APPS_mistral-nemo_rule: 32/300\n",
+      "APPS_qwen2.5-coder_None: 19/300\n",
+      "APPS_qwen2.5-coder_instruction: 21/300\n",
+      "APPS_qwen2.5-coder_rule: 18/300\n",
       "HumanEval\n",
-      "llama3: 61/164\n",
-      "llama3.1: 89/164\n",
-      "mistral-nemo: 58/164\n",
-      "qwen2.5-coder: 107/164\n"
+      "HumanEval_llama3_None: 59/164\n",
+      "HumanEval_llama3_instruction: 60/164\n",
+      "HumanEval_llama3_rule: 61/164\n",
+      "HumanEval_llama3.1_None: 88/164\n",
+      "HumanEval_llama3.1_instruction: 90/164\n",
+      "HumanEval_llama3.1_rule: 88/164\n",
+      "HumanEval_mistral-nemo_None: 55/164\n",
+      "HumanEval_mistral-nemo_instruction: 58/164\n",
+      "HumanEval_mistral-nemo_rule: 58/164\n",
+      "HumanEval_qwen2.5-coder_None: 108/164\n",
+      "HumanEval_qwen2.5-coder_instruction: 108/164\n",
+      "HumanEval_qwen2.5-coder_rule: 108/164\n"
      ]
     }
    ],
@@ -106,8 +161,9 @@
     "for bm in benchmarks:\n",
     "    print(bm)\n",
     "    for model in models:\n",
-    "        result = vote(\"ast_only\", bm, model)\n",
-    "        print(f\"{model}: {result.count(True)}/{len(result)}\")"
+    "        for mode in modes:\n",
+    "            result = vote(\"ast_only\", bm, model)\n",
+    "            print(f\"{bm}_{model}_{mode}: {result.count(True)}/{len(result)}\")"
    ]
   },
   {
@@ -119,18 +175,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "APPS\n",
+      "APPS_llama3_None: 19/300\n",
+      "APPS_llama3_instruction: 20/300\n",
+      "APPS_llama3_rule: 19/300\n",
+      "APPS_llama3.1_None: 20/300\n",
+      "APPS_llama3.1_instruction: 21/300\n",
+      "APPS_llama3.1_rule: 20/300\n",
+      "APPS_mistral-nemo_None: 31/300\n",
+      "APPS_mistral-nemo_instruction: 30/300\n",
+      "APPS_mistral-nemo_rule: 30/300\n",
+      "APPS_qwen2.5-coder_None: 19/300\n",
+      "APPS_qwen2.5-coder_instruction: 18/300\n",
+      "APPS_qwen2.5-coder_rule: 21/300\n",
       "HumanEval\n",
-      "llama3: 58/164\n",
-      "llama3.1: 90/164\n",
-      "mistral-nemo: 60/164\n",
-      "qwen2.5-coder: 109/164\n"
+      "HumanEval_llama3_None: 62/164\n",
+      "HumanEval_llama3_instruction: 62/164\n",
+      "HumanEval_llama3_rule: 60/164\n",
+      "HumanEval_llama3.1_None: 91/164\n",
+      "HumanEval_llama3.1_instruction: 89/164\n",
+      "HumanEval_llama3.1_rule: 93/164\n",
+      "HumanEval_mistral-nemo_None: 56/164\n",
+      "HumanEval_mistral-nemo_instruction: 59/164\n",
+      "HumanEval_mistral-nemo_rule: 57/164\n",
+      "HumanEval_qwen2.5-coder_None: 111/164\n",
+      "HumanEval_qwen2.5-coder_instruction: 108/164\n",
+      "HumanEval_qwen2.5-coder_rule: 107/164\n"
      ]
     }
    ],
@@ -138,8 +215,9 @@
     "for bm in benchmarks:\n",
     "    print(bm)\n",
     "    for model in models:\n",
-    "        result = vote(\"var_unif\", bm, model)\n",
-    "        print(f\"{model}: {result.count(True)}/{len(result)}\")"
+    "        for mode in modes:\n",
+    "            result = vote(\"var_unif\", bm, model)\n",
+    "            print(f\"{bm}_{model}_{mode}: {result.count(True)}/{len(result)}\")"
    ]
   }
  ],
