Test get_entropy on preprocessed results

--- a/preprocessed_results/vote.ipynb
+++ b/preprocessed_results/vote.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
-    "import random"
+    "import random\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,11 +25,17 @@
     "    ties = [i for i in data if i[1][0] == data[0][1][0]]\n",
     "    return random.choice(ties)\n",
     "\n",
+    "def get_entropy(data):\n",
+    "    probs = np.array(data)[:, 0].astype(float)\n",
+    "    probs = probs / np.sum(probs)\n",
+    "    entropy = -np.sum(probs * np.log2(probs))\n",
+    "    return entropy\n",
     "\n",
     "def vote(mode, benchmark, model):\n",
     "    with open(f\"./preprocessed_results/{mode}/{benchmark}_{model}.json\", \"r\") as f:\n",
     "        data =json.load(f)\n",
     "    result = []\n",
+    "    entropy = []\n",
     "\n",
     "    for problem_id, samples in data.items():\n",
     "        sample_dict = dict()\n",
@@ -38,12 +45,13 @@
     "            elif sample[0] in sample_dict:\n",
     "                sample_dict[sample[0]][0] += 1\n",
     "        major = sorted(sample_dict.items(), key=lambda x:x[1][0], reverse=True)\n",
+    "        entropy.append(get_entropy(list(sample_dict.values())))\n",
     "        if \"passed\" in tie_break(major)[1][1]:\n",
     "            result.append(True)\n",
     "        else:\n",
     "            result.append(False)\n",
     "        \n",
-    "    return result"
+    "    return result, entropy"
    ]
   },
   {
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -63,10 +71,10 @@
      "output_type": "stream",
      "text": [
       "HumanEval\n",
-      "llama3: 50/164\n",
-      "llama3.1: 82/164\n",
-      "mistral-nemo: 53/164\n",
-      "qwen2.5-coder: 109/164\n"
+      "llama3: 55/164, entropy: 3.5220\n",
+      "llama3.1: 88/164, entropy: 3.2418\n",
+      "mistral-nemo: 54/164, entropy: 3.2060\n",
+      "qwen2.5-coder: 105/164, entropy: 2.2601\n"
      ]
     }
    ],
@@ -74,8 +82,8 @@
     "for bm in benchmarks:\n",
     "    print(bm)\n",
     "    for model in models:\n",
-    "        result = vote(\"augmented\", bm, model + \"_augmented\")\n",
-    "        print(f\"{model}: {result.count(True)}/{len(result)}\")"
+    "        result, entr = vote(\"augmented\", bm, model + \"_augmented\")\n",
+    "        print(f\"{model}: {result.count(True)}/{len(result)}, entropy: {np.mean(entr):.4f}\")"
    ]
   },
   {
@@ -87,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -95,10 +103,10 @@
      "output_type": "stream",
      "text": [
       "HumanEval\n",
-      "llama3: 61/164\n",
-      "llama3.1: 89/164\n",
-      "mistral-nemo: 58/164\n",
-      "qwen2.5-coder: 107/164\n"
+      "llama3: 57/164, entropy: 3.3802\n",
+      "llama3.1: 88/164, entropy: 3.1383\n",
+      "mistral-nemo: 57/164, entropy: 3.0822\n",
+      "qwen2.5-coder: 107/164, entropy: 2.0959\n"
      ]
     }
    ],
@@ -106,8 +114,8 @@
     "for bm in benchmarks:\n",
     "    print(bm)\n",
     "    for model in models:\n",
-    "        result = vote(\"ast_only\", bm, model)\n",
-    "        print(f\"{model}: {result.count(True)}/{len(result)}\")"
+    "        result, entr = vote(\"ast_only\", bm, model)\n",
+    "        print(f\"{model}: {result.count(True)}/{len(result)}, entropy: {np.mean(entr):.4f}\")"
    ]
   },
   {
@@ -119,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -127,10 +135,10 @@
      "output_type": "stream",
      "text": [
       "HumanEval\n",
-      "llama3: 58/164\n",
-      "llama3.1: 90/164\n",
-      "mistral-nemo: 60/164\n",
-      "qwen2.5-coder: 109/164\n"
+      "llama3: 60/164, entropy: 3.2169\n",
+      "llama3.1: 88/164, entropy: 2.9190\n",
+      "mistral-nemo: 55/164, entropy: 2.9634\n",
+      "qwen2.5-coder: 109/164, entropy: 1.8344\n"
      ]
     }
    ],
@@ -138,8 +146,8 @@
     "for bm in benchmarks:\n",
     "    print(bm)\n",
     "    for model in models:\n",
-    "        result = vote(\"var_unif\", bm, model)\n",
-    "        print(f\"{model}: {result.count(True)}/{len(result)}\")"
+    "        result, entr = vote(\"var_unif\", bm, model)\n",
+    "        print(f\"{model}: {result.count(True)}/{len(result)}, entropy: {np.mean(entr):.4f}\")"
    ]
   }
  ],
@@ -159,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
