Test get_entropy on preprocessed results

--- a/preprocessed_results/vote.ipynb
+++ b/preprocessed_results/vote.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 21,
-=======
-   "execution_count": 1,
->>>>>>> 7896f43edb86474ad710f26de98e7f2e61337529
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +14,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 22,
-=======
-   "execution_count": 2,
->>>>>>> 7896f43edb86474ad710f26de98e7f2e61337529
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,11 +75,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 28,
-=======
-   "execution_count": 8,
->>>>>>> 7896f43edb86474ad710f26de98e7f2e61337529
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -95,38 +83,31 @@
      "output_type": "stream",
      "text": [
       "APPS\n",
-      "APPS_llama3_None: 19/300\n",
-      "APPS_llama3_instruction: 20/300\n",
-      "APPS_llama3_rule: 21/300\n",
-      "APPS_llama3.1_None: 18/300\n",
-      "APPS_llama3.1_instruction: 21/300\n",
-      "APPS_llama3.1_rule: 20/300\n",
-      "APPS_mistral-nemo_None: 25/300\n",
-      "APPS_mistral-nemo_instruction: 29/300\n",
-      "APPS_mistral-nemo_rule: 28/300\n",
-      "APPS_qwen2.5-coder_None: 18/300\n",
-      "APPS_qwen2.5-coder_instruction: 21/300\n",
-      "APPS_qwen2.5-coder_rule: 18/300\n",
+      "llama3: 22/300, entropy: 4.2075\n",
+      "llama3: 21/300, entropy: 4.2075\n",
+      "llama3: 19/300, entropy: 4.2075\n",
+      "llama3.1: 19/300, entropy: 4.2119\n",
+      "llama3.1: 18/300, entropy: 4.2119\n",
+      "llama3.1: 18/300, entropy: 4.2119\n",
+      "mistral-nemo: 29/300, entropy: 4.2141\n",
+      "mistral-nemo: 26/300, entropy: 4.2141\n",
+      "mistral-nemo: 27/300, entropy: 4.2141\n",
+      "qwen2.5-coder: 19/300, entropy: 4.1487\n",
+      "qwen2.5-coder: 17/300, entropy: 4.1487\n",
+      "qwen2.5-coder: 21/300, entropy: 4.1487\n",
       "HumanEval\n",
-<<<<<<< HEAD
-      "llama3: 55/164, entropy: 3.5220\n",
+      "llama3: 60/164, entropy: 3.5220\n",
+      "llama3: 57/164, entropy: 3.5220\n",
+      "llama3: 52/164, entropy: 3.5220\n",
+      "llama3.1: 85/164, entropy: 3.2418\n",
       "llama3.1: 88/164, entropy: 3.2418\n",
-      "mistral-nemo: 54/164, entropy: 3.2060\n",
+      "llama3.1: 82/164, entropy: 3.2418\n",
+      "mistral-nemo: 56/164, entropy: 3.2060\n",
+      "mistral-nemo: 57/164, entropy: 3.2060\n",
+      "mistral-nemo: 55/164, entropy: 3.2060\n",
+      "qwen2.5-coder: 106/164, entropy: 2.2601\n",
+      "qwen2.5-coder: 106/164, entropy: 2.2601\n",
       "qwen2.5-coder: 105/164, entropy: 2.2601\n"
-=======
-      "HumanEval_llama3_None: 53/164\n",
-      "HumanEval_llama3_instruction: 56/164\n",
-      "HumanEval_llama3_rule: 56/164\n",
-      "HumanEval_llama3.1_None: 83/164\n",
-      "HumanEval_llama3.1_instruction: 82/164\n",
-      "HumanEval_llama3.1_rule: 85/164\n",
-      "HumanEval_mistral-nemo_None: 55/164\n",
-      "HumanEval_mistral-nemo_instruction: 54/164\n",
-      "HumanEval_mistral-nemo_rule: 55/164\n",
-      "HumanEval_qwen2.5-coder_None: 109/164\n",
-      "HumanEval_qwen2.5-coder_instruction: 108/164\n",
-      "HumanEval_qwen2.5-coder_rule: 107/164\n"
->>>>>>> 7896f43edb86474ad710f26de98e7f2e61337529
      ]
     }
    ],
@@ -134,14 +115,9 @@
     "for bm in benchmarks:\n",
     "    print(bm)\n",
     "    for model in models:\n",
-<<<<<<< HEAD
-    "        result, entr = vote(\"augmented\", bm, model + \"_augmented\")\n",
-    "        print(f\"{model}: {result.count(True)}/{len(result)}, entropy: {np.mean(entr):.4f}\")"
-=======
     "        for mode in modes:\n",
-    "            result = vote(\"augmented\", bm, model + \"_augmented\")\n",
-    "            print(f\"{bm}_{model}_{mode}: {result.count(True)}/{len(result)}\")"
->>>>>>> 7896f43edb86474ad710f26de98e7f2e61337529
+    "            result, entr = vote(\"augmented\", bm, model + \"_augmented\")\n",
+    "            print(f\"{model}: {result.count(True)}/{len(result)}, entropy: {np.mean(entr):.4f}\")"
    ]
   },
   {
@@ -153,11 +129,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 29,
-=======
-   "execution_count": 6,
->>>>>>> 7896f43edb86474ad710f26de98e7f2e61337529
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -165,38 +137,31 @@
      "output_type": "stream",
      "text": [
       "APPS\n",
-      "APPS_llama3_None: 18/300\n",
-      "APPS_llama3_instruction: 21/300\n",
-      "APPS_llama3_rule: 23/300\n",
-      "APPS_llama3.1_None: 21/300\n",
-      "APPS_llama3.1_instruction: 18/300\n",
-      "APPS_llama3.1_rule: 19/300\n",
-      "APPS_mistral-nemo_None: 28/300\n",
-      "APPS_mistral-nemo_instruction: 34/300\n",
-      "APPS_mistral-nemo_rule: 32/300\n",
-      "APPS_qwen2.5-coder_None: 19/300\n",
-      "APPS_qwen2.5-coder_instruction: 21/300\n",
-      "APPS_qwen2.5-coder_rule: 18/300\n",
+      "llama3: 20/300, entropy: 4.1782\n",
+      "llama3: 18/300, entropy: 4.1782\n",
+      "llama3: 19/300, entropy: 4.1782\n",
+      "llama3.1: 20/300, entropy: 4.1933\n",
+      "llama3.1: 19/300, entropy: 4.1933\n",
+      "llama3.1: 20/300, entropy: 4.1933\n",
+      "mistral-nemo: 28/300, entropy: 4.1939\n",
+      "mistral-nemo: 34/300, entropy: 4.1939\n",
+      "mistral-nemo: 31/300, entropy: 4.1939\n",
+      "qwen2.5-coder: 17/300, entropy: 4.1335\n",
+      "qwen2.5-coder: 22/300, entropy: 4.1335\n",
+      "qwen2.5-coder: 22/300, entropy: 4.1335\n",
       "HumanEval\n",
-<<<<<<< HEAD
-      "llama3: 57/164, entropy: 3.3802\n",
+      "llama3: 60/164, entropy: 3.3802\n",
+      "llama3: 58/164, entropy: 3.3802\n",
+      "llama3: 61/164, entropy: 3.3802\n",
       "llama3.1: 88/164, entropy: 3.1383\n",
+      "llama3.1: 90/164, entropy: 3.1383\n",
+      "llama3.1: 86/164, entropy: 3.1383\n",
+      "mistral-nemo: 56/164, entropy: 3.0822\n",
       "mistral-nemo: 57/164, entropy: 3.0822\n",
+      "mistral-nemo: 58/164, entropy: 3.0822\n",
+      "qwen2.5-coder: 107/164, entropy: 2.0959\n",
+      "qwen2.5-coder: 108/164, entropy: 2.0959\n",
       "qwen2.5-coder: 107/164, entropy: 2.0959\n"
-=======
-      "HumanEval_llama3_None: 59/164\n",
-      "HumanEval_llama3_instruction: 60/164\n",
-      "HumanEval_llama3_rule: 61/164\n",
-      "HumanEval_llama3.1_None: 88/164\n",
-      "HumanEval_llama3.1_instruction: 90/164\n",
-      "HumanEval_llama3.1_rule: 88/164\n",
-      "HumanEval_mistral-nemo_None: 55/164\n",
-      "HumanEval_mistral-nemo_instruction: 58/164\n",
-      "HumanEval_mistral-nemo_rule: 58/164\n",
-      "HumanEval_qwen2.5-coder_None: 108/164\n",
-      "HumanEval_qwen2.5-coder_instruction: 108/164\n",
-      "HumanEval_qwen2.5-coder_rule: 108/164\n"
->>>>>>> 7896f43edb86474ad710f26de98e7f2e61337529
      ]
     }
    ],
@@ -204,14 +169,9 @@
     "for bm in benchmarks:\n",
     "    print(bm)\n",
     "    for model in models:\n",
-<<<<<<< HEAD
-    "        result, entr = vote(\"ast_only\", bm, model)\n",
-    "        print(f\"{model}: {result.count(True)}/{len(result)}, entropy: {np.mean(entr):.4f}\")"
-=======
     "        for mode in modes:\n",
-    "            result = vote(\"ast_only\", bm, model)\n",
-    "            print(f\"{bm}_{model}_{mode}: {result.count(True)}/{len(result)}\")"
->>>>>>> 7896f43edb86474ad710f26de98e7f2e61337529
+    "            result, entr = vote(\"ast_only\", bm, model)\n",
+    "            print(f\"{model}: {result.count(True)}/{len(result)}, entropy: {np.mean(entr):.4f}\")"
    ]
   },
   {
@@ -223,11 +183,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 30,
-=======
-   "execution_count": 7,
->>>>>>> 7896f43edb86474ad710f26de98e7f2e61337529
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -235,38 +191,31 @@
      "output_type": "stream",
      "text": [
       "APPS\n",
-      "APPS_llama3_None: 19/300\n",
-      "APPS_llama3_instruction: 20/300\n",
-      "APPS_llama3_rule: 19/300\n",
-      "APPS_llama3.1_None: 20/300\n",
-      "APPS_llama3.1_instruction: 21/300\n",
-      "APPS_llama3.1_rule: 20/300\n",
-      "APPS_mistral-nemo_None: 31/300\n",
-      "APPS_mistral-nemo_instruction: 30/300\n",
-      "APPS_mistral-nemo_rule: 30/300\n",
-      "APPS_qwen2.5-coder_None: 19/300\n",
-      "APPS_qwen2.5-coder_instruction: 18/300\n",
-      "APPS_qwen2.5-coder_rule: 21/300\n",
+      "llama3: 21/300, entropy: 4.1645\n",
+      "llama3: 17/300, entropy: 4.1645\n",
+      "llama3: 19/300, entropy: 4.1645\n",
+      "llama3.1: 20/300, entropy: 4.1611\n",
+      "llama3.1: 20/300, entropy: 4.1611\n",
+      "llama3.1: 22/300, entropy: 4.1611\n",
+      "mistral-nemo: 35/300, entropy: 4.1611\n",
+      "mistral-nemo: 33/300, entropy: 4.1611\n",
+      "mistral-nemo: 33/300, entropy: 4.1611\n",
+      "qwen2.5-coder: 19/300, entropy: 4.1175\n",
+      "qwen2.5-coder: 21/300, entropy: 4.1175\n",
+      "qwen2.5-coder: 20/300, entropy: 4.1175\n",
       "HumanEval\n",
-<<<<<<< HEAD
-      "llama3: 60/164, entropy: 3.2169\n",
-      "llama3.1: 88/164, entropy: 2.9190\n",
-      "mistral-nemo: 55/164, entropy: 2.9634\n",
-      "qwen2.5-coder: 109/164, entropy: 1.8344\n"
-=======
-      "HumanEval_llama3_None: 62/164\n",
-      "HumanEval_llama3_instruction: 62/164\n",
-      "HumanEval_llama3_rule: 60/164\n",
-      "HumanEval_llama3.1_None: 91/164\n",
-      "HumanEval_llama3.1_instruction: 89/164\n",
-      "HumanEval_llama3.1_rule: 93/164\n",
-      "HumanEval_mistral-nemo_None: 56/164\n",
-      "HumanEval_mistral-nemo_instruction: 59/164\n",
-      "HumanEval_mistral-nemo_rule: 57/164\n",
-      "HumanEval_qwen2.5-coder_None: 111/164\n",
-      "HumanEval_qwen2.5-coder_instruction: 108/164\n",
-      "HumanEval_qwen2.5-coder_rule: 107/164\n"
->>>>>>> 7896f43edb86474ad710f26de98e7f2e61337529
+      "llama3: 63/164, entropy: 3.2169\n",
+      "llama3: 63/164, entropy: 3.2169\n",
+      "llama3: 57/164, entropy: 3.2169\n",
+      "llama3.1: 91/164, entropy: 2.9190\n",
+      "llama3.1: 91/164, entropy: 2.9190\n",
+      "llama3.1: 90/164, entropy: 2.9190\n",
+      "mistral-nemo: 58/164, entropy: 2.9634\n",
+      "mistral-nemo: 58/164, entropy: 2.9634\n",
+      "mistral-nemo: 56/164, entropy: 2.9634\n",
+      "qwen2.5-coder: 106/164, entropy: 1.8344\n",
+      "qwen2.5-coder: 107/164, entropy: 1.8344\n",
+      "qwen2.5-coder: 108/164, entropy: 1.8344\n"
      ]
     }
    ],
@@ -274,14 +223,9 @@
     "for bm in benchmarks:\n",
     "    print(bm)\n",
     "    for model in models:\n",
-<<<<<<< HEAD
-    "        result, entr = vote(\"var_unif\", bm, model)\n",
-    "        print(f\"{model}: {result.count(True)}/{len(result)}, entropy: {np.mean(entr):.4f}\")"
-=======
     "        for mode in modes:\n",
-    "            result = vote(\"var_unif\", bm, model)\n",
-    "            print(f\"{bm}_{model}_{mode}: {result.count(True)}/{len(result)}\")"
->>>>>>> 7896f43edb86474ad710f26de98e7f2e61337529
+    "            result, entr = vote(\"var_unif\", bm, model)\n",
+    "            print(f\"{model}: {result.count(True)}/{len(result)}, entropy: {np.mean(entr):.4f}\")"
    ]
   }
  ],
