--- a/preprocessed_results/vote.ipynb
+++ b/preprocessed_results/vote.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -83,31 +83,31 @@
      "output_type": "stream",
      "text": [
       "APPS\n",
-      "llama3: 22/300, entropy: 4.2075\n",
-      "llama3: 21/300, entropy: 4.2075\n",
-      "llama3: 19/300, entropy: 4.2075\n",
-      "llama3.1: 19/300, entropy: 4.2119\n",
-      "llama3.1: 18/300, entropy: 4.2119\n",
-      "llama3.1: 18/300, entropy: 4.2119\n",
-      "mistral-nemo: 29/300, entropy: 4.2141\n",
-      "mistral-nemo: 26/300, entropy: 4.2141\n",
-      "mistral-nemo: 27/300, entropy: 4.2141\n",
-      "qwen2.5-coder: 19/300, entropy: 4.1487\n",
-      "qwen2.5-coder: 17/300, entropy: 4.1487\n",
-      "qwen2.5-coder: 21/300, entropy: 4.1487\n",
+      "llama3: 20/300, entropy: 4.2075\n",
+      "llama3: 22/300, entropy: 4.2065\n",
+      "llama3: 19/300, entropy: 4.2756\n",
+      "llama3.1: 17/300, entropy: 4.2119\n",
+      "llama3.1: 9/300, entropy: 4.2453\n",
+      "llama3.1: 3/300, entropy: 4.3203\n",
+      "mistral-nemo: 32/300, entropy: 4.2141\n",
+      "mistral-nemo: 29/300, entropy: 4.2324\n",
+      "mistral-nemo: 17/300, entropy: 4.2609\n",
+      "qwen2.5-coder: 18/300, entropy: 4.1487\n",
+      "qwen2.5-coder: 16/300, entropy: 4.1856\n",
+      "qwen2.5-coder: 5/300, entropy: 4.2735\n",
       "HumanEval\n",
-      "llama3: 60/164, entropy: 3.5220\n",
-      "llama3: 57/164, entropy: 3.5220\n",
-      "llama3: 52/164, entropy: 3.5220\n",
-      "llama3.1: 85/164, entropy: 3.2418\n",
+      "llama3: 56/164, entropy: 3.5220\n",
+      "llama3: 49/164, entropy: 3.7288\n",
+      "llama3: 25/164, entropy: 4.0742\n",
       "llama3.1: 88/164, entropy: 3.2418\n",
-      "llama3.1: 82/164, entropy: 3.2418\n",
-      "mistral-nemo: 56/164, entropy: 3.2060\n",
-      "mistral-nemo: 57/164, entropy: 3.2060\n",
+      "llama3.1: 80/164, entropy: 3.4414\n",
+      "llama3.1: 54/164, entropy: 4.1726\n",
       "mistral-nemo: 55/164, entropy: 3.2060\n",
+      "mistral-nemo: 56/164, entropy: 3.4040\n",
+      "mistral-nemo: 43/164, entropy: 3.8630\n",
       "qwen2.5-coder: 106/164, entropy: 2.2601\n",
-      "qwen2.5-coder: 106/164, entropy: 2.2601\n",
-      "qwen2.5-coder: 105/164, entropy: 2.2601\n"
+      "qwen2.5-coder: 123/164, entropy: 2.2092\n",
+      "qwen2.5-coder: 119/164, entropy: 2.9665\n"
      ]
     }
    ],
@@ -116,7 +116,10 @@
     "    print(bm)\n",
     "    for model in models:\n",
     "        for mode in modes:\n",
-    "            result, entr = vote(\"augmented\", bm, model + \"_augmented\")\n",
+    "            if not mode:\n",
+    "                result, entr = vote(\"augmented\", bm, model + \"_augmented\")\n",
+    "            if mode:\n",
+    "                result, entr = vote(\"augmented\", bm, model, mode + \"_augmented\")\n",
     "            print(f\"{model}: {result.count(True)}/{len(result)}, entropy: {np.mean(entr):.4f}\")"
    ]
   },
@@ -129,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -137,31 +140,31 @@
      "output_type": "stream",
      "text": [
       "APPS\n",
-      "llama3: 20/300, entropy: 4.1782\n",
       "llama3: 18/300, entropy: 4.1782\n",
-      "llama3: 19/300, entropy: 4.1782\n",
-      "llama3.1: 20/300, entropy: 4.1933\n",
-      "llama3.1: 19/300, entropy: 4.1933\n",
-      "llama3.1: 20/300, entropy: 4.1933\n",
+      "llama3: 21/300, entropy: 4.2031\n",
+      "llama3: 18/300, entropy: 4.2745\n",
+      "llama3.1: 18/300, entropy: 4.1933\n",
+      "llama3.1: 11/300, entropy: 4.2374\n",
+      "llama3.1: 3/300, entropy: 4.3193\n",
       "mistral-nemo: 28/300, entropy: 4.1939\n",
-      "mistral-nemo: 34/300, entropy: 4.1939\n",
-      "mistral-nemo: 31/300, entropy: 4.1939\n",
-      "qwen2.5-coder: 17/300, entropy: 4.1335\n",
-      "qwen2.5-coder: 22/300, entropy: 4.1335\n",
-      "qwen2.5-coder: 22/300, entropy: 4.1335\n",
+      "mistral-nemo: 32/300, entropy: 4.2112\n",
+      "mistral-nemo: 18/300, entropy: 4.2504\n",
+      "qwen2.5-coder: 18/300, entropy: 4.1335\n",
+      "qwen2.5-coder: 15/300, entropy: 4.1765\n",
+      "qwen2.5-coder: 6/300, entropy: 4.2696\n",
       "HumanEval\n",
-      "llama3: 60/164, entropy: 3.3802\n",
-      "llama3: 58/164, entropy: 3.3802\n",
-      "llama3: 61/164, entropy: 3.3802\n",
-      "llama3.1: 88/164, entropy: 3.1383\n",
-      "llama3.1: 90/164, entropy: 3.1383\n",
-      "llama3.1: 86/164, entropy: 3.1383\n",
-      "mistral-nemo: 56/164, entropy: 3.0822\n",
-      "mistral-nemo: 57/164, entropy: 3.0822\n",
-      "mistral-nemo: 58/164, entropy: 3.0822\n",
-      "qwen2.5-coder: 107/164, entropy: 2.0959\n",
+      "llama3: 62/164, entropy: 3.3802\n",
+      "llama3: 53/164, entropy: 3.6280\n",
+      "llama3: 24/164, entropy: 4.0433\n",
+      "llama3.1: 87/164, entropy: 3.1383\n",
+      "llama3.1: 81/164, entropy: 3.3463\n",
+      "llama3.1: 54/164, entropy: 4.1527\n",
+      "mistral-nemo: 59/164, entropy: 3.0822\n",
+      "mistral-nemo: 58/164, entropy: 3.2893\n",
+      "mistral-nemo: 51/164, entropy: 3.7295\n",
       "qwen2.5-coder: 108/164, entropy: 2.0959\n",
-      "qwen2.5-coder: 107/164, entropy: 2.0959\n"
+      "qwen2.5-coder: 126/164, entropy: 2.0695\n",
+      "qwen2.5-coder: 119/164, entropy: 2.7535\n"
      ]
     }
    ],
@@ -170,7 +173,7 @@
     "    print(bm)\n",
     "    for model in models:\n",
     "        for mode in modes:\n",
-    "            result, entr = vote(\"ast_only\", bm, model)\n",
+    "            result, entr = vote(\"ast_only\", bm, model, mode)\n",
     "            print(f\"{model}: {result.count(True)}/{len(result)}, entropy: {np.mean(entr):.4f}\")"
    ]
   },
@@ -183,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -191,31 +194,31 @@
      "output_type": "stream",
      "text": [
       "APPS\n",
-      "llama3: 21/300, entropy: 4.1645\n",
-      "llama3: 17/300, entropy: 4.1645\n",
-      "llama3: 19/300, entropy: 4.1645\n",
+      "llama3: 20/300, entropy: 4.1645\n",
+      "llama3: 18/300, entropy: 4.2031\n",
+      "llama3: 17/300, entropy: 4.2681\n",
       "llama3.1: 20/300, entropy: 4.1611\n",
-      "llama3.1: 20/300, entropy: 4.1611\n",
-      "llama3.1: 22/300, entropy: 4.1611\n",
-      "mistral-nemo: 35/300, entropy: 4.1611\n",
-      "mistral-nemo: 33/300, entropy: 4.1611\n",
-      "mistral-nemo: 33/300, entropy: 4.1611\n",
-      "qwen2.5-coder: 19/300, entropy: 4.1175\n",
-      "qwen2.5-coder: 21/300, entropy: 4.1175\n",
-      "qwen2.5-coder: 20/300, entropy: 4.1175\n",
+      "llama3.1: 11/300, entropy: 4.2222\n",
+      "llama3.1: 4/300, entropy: 4.3185\n",
+      "mistral-nemo: 34/300, entropy: 4.1611\n",
+      "mistral-nemo: 32/300, entropy: 4.1831\n",
+      "mistral-nemo: 21/300, entropy: 4.2401\n",
+      "qwen2.5-coder: 22/300, entropy: 4.1175\n",
+      "qwen2.5-coder: 20/300, entropy: 4.1660\n",
+      "qwen2.5-coder: 8/300, entropy: 4.2640\n",
       "HumanEval\n",
       "llama3: 63/164, entropy: 3.2169\n",
-      "llama3: 63/164, entropy: 3.2169\n",
-      "llama3: 57/164, entropy: 3.2169\n",
+      "llama3: 51/164, entropy: 3.5087\n",
+      "llama3: 32/164, entropy: 3.8887\n",
       "llama3.1: 91/164, entropy: 2.9190\n",
-      "llama3.1: 91/164, entropy: 2.9190\n",
-      "llama3.1: 90/164, entropy: 2.9190\n",
-      "mistral-nemo: 58/164, entropy: 2.9634\n",
-      "mistral-nemo: 58/164, entropy: 2.9634\n",
-      "mistral-nemo: 56/164, entropy: 2.9634\n",
-      "qwen2.5-coder: 106/164, entropy: 1.8344\n",
-      "qwen2.5-coder: 107/164, entropy: 1.8344\n",
-      "qwen2.5-coder: 108/164, entropy: 1.8344\n"
+      "llama3.1: 85/164, entropy: 3.1593\n",
+      "llama3.1: 58/164, entropy: 3.9874\n",
+      "mistral-nemo: 57/164, entropy: 2.9634\n",
+      "mistral-nemo: 62/164, entropy: 3.2047\n",
+      "mistral-nemo: 62/164, entropy: 3.5518\n",
+      "qwen2.5-coder: 108/164, entropy: 1.8344\n",
+      "qwen2.5-coder: 127/164, entropy: 1.7788\n",
+      "qwen2.5-coder: 123/164, entropy: 2.3531\n"
      ]
     }
    ],
@@ -224,7 +227,7 @@
     "    print(bm)\n",
     "    for model in models:\n",
     "        for mode in modes:\n",
-    "            result, entr = vote(\"var_unif\", bm, model)\n",
+    "            result, entr = vote(\"var_unif\", bm, model, mode)\n",
     "            print(f\"{model}: {result.count(True)}/{len(result)}, entropy: {np.mean(entr):.4f}\")"
    ]
   }
@@ -245,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
